clap_derive/tests/ui/subcommand_opt_vec.stderr
error: Option<Vec<T>> type is not allowed for subcommand
  --> $DIR/subcommand_opt_vec.rs:17:10
   |
17 |     cmd: Option<Vec<Command>>,
   |          ^^^^^^

error[E0277]: the trait bound `MakeCookie: std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not satisfied
  --> $DIR/subcommand_opt_vec.rs:11:10
   |
11 | #[derive(Clap, Debug)]
   |          ^^^^ the trait `std::convert::From<clap::parse::matches::arg_matches::ArgMatches>` is not implemented for `MakeCookie`
